[package]
name = "stltogltf"
version = "0.1.0"
authors = ["hjkoskel <hjkoskel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
wasm-bindgen = "0.2"
serde = "*"
serde_json = "*"
serde_derive = "*"
byteorder = "*"
stl_io = "*"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies.web-sys]
version = "0.3"
features = ["console"]
